# sensor_sync

./: README.md  package.xml  setup.py
firmware/: sync.ino
sensor_sync/: protocol.py  sync_node.py
test/: test_protocol.py
